# dspxmodel

./: .gitmodules  CMakeLists.txt  README.md  分片规则.md
benchmarks/: CMakeLists.txt  model_edit_benchmark.cpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  dspxmodelConfig.cmake.in
src/core/: CMakeLists.txt  DSPXModelCoreGlobal.h  Document.cpp  Document.h  Document_p.h  Schema.cpp  Schema.h
src/orm/: AnchorNode.cpp  AnchorNode.h  AnchorNodeSequence.cpp  AnchorNodeSequence.h  AnchorNodeSequence_p.h  AnchorNode_p.h  AudioClip.cpp  AudioClip.h  AudioClip_p.h  CMakeLists.txt  Clip.cpp  Clip.h  ClipSequence.cpp  ClipSequence.h  ClipSequence_p.h  Clip_p.h  ConversionUtils_p.h  DSPXModelORMGlobal.h  DynamicMixingAnchor.cpp  DynamicMixingAnchor.h  DynamicMixingAnchorSequence.cpp  DynamicMixingAnchorSequence.h  DynamicMixingAnchorSequence_p.h  DynamicMixingAnchor_p.h  EntityObject.cpp  EntityObject.h  EntityObject_p.h  FreeValueDataArray.cpp  FreeValueDataArray.h  FreeValueDataArray_p.h  Handle.h  JSIterable.cpp  JSIterable_p.h  KeySignature.cpp  KeySignature.h  KeySignatureSequence.cpp  KeySignatureSequence.h  KeySignatureSequence_p.h  KeySignature_p.h  Label.cpp  (+70 more)
src/orm/qml/: iterable.mjs
src/piece/: CMakeLists.txt  DSPXModelPieceGlobal.h  Piece.cpp  Piece.h  PieceDivider.cpp  PieceDivider.h  PieceDivider_p.h  Piece_p.h
src/propertymapper/: AnchorNodePropertyMapper.cpp  AnchorNodePropertyMapper.h  AnchorNodePropertyMapper_p.h  CMakeLists.txt  ClipPropertyMapper.cpp  ClipPropertyMapper.h  ClipPropertyMapper_p.h  DSPXModelPropertyMapperGlobal.h  KeySignaturePropertyMapper.cpp  KeySignaturePropertyMapper.h  KeySignaturePropertyMapper_p.h  LabelPropertyMapper.cpp  LabelPropertyMapper.h  LabelPropertyMapper_p.h  NotePropertyMapper.cpp  NotePropertyMapper.h  NotePropertyMapper_p.h  PropertyMapperData_p.h  TempoPropertyMapper.cpp  TempoPropertyMapper.h  TempoPropertyMapper_p.h  TrackPropertyMapper.cpp  TrackPropertyMapper.h  TrackPropertyMapper_p.h
src/selectionmodel/: AnchorNodeSelectionModel.cpp  AnchorNodeSelectionModel.h  AnchorNodeSelectionModel_p.h  CMakeLists.txt  ClipSelectionModel.cpp  ClipSelectionModel.h  ClipSelectionModel_p.h  DSPXModelSelectionModelGlobal.h  DynamicMixingAnchorSelectionModel.cpp  DynamicMixingAnchorSelectionModel.h  DynamicMixingAnchorSelectionModel_p.h  KeySignatureSelectionModel.cpp  KeySignatureSelectionModel.h  KeySignatureSelectionModel_p.h  LabelSelectionModel.cpp  LabelSelectionModel.h  LabelSelectionModel_p.h  NoteSelectionModel.cpp  NoteSelectionModel.h  NoteSelectionModel_p.h  SelectionModel.cpp  SelectionModel.h  SelectionModel_p.h  TempoSelectionModel.cpp  TempoSelectionModel.h  TempoSelectionModel_p.h  TrackSelectionModel.cpp  TrackSelectionModel.h  TrackSelectionModel_p.h
tests/: CMakeLists.txt
tests/fuzz/: CMakeLists.txt  tst_note_overlapping.cpp
tests/helpers/: orm_test_context.h
tests/orm/: CMakeLists.txt  tst_orm_properties.cpp  tst_orm_signals.cpp  tst_orm_smoke.cpp
tests/propertymapper/: CMakeLists.txt  tst_propertymapper.cpp
tests/selectionmodel/: CMakeLists.txt  tst_selectionmodel.cpp
